# AnyStreamProcess

./: .gitignore  AppGUI.ts  CMakeLists.txt  Dockerfile  Makefile  README.md  app.pro  appConsole.pro  appGUI.pro  appGui.pro  buildRuntimeDocker.sh  compileMlTest.sh  config.cpp  config.h  dialogAbout.cpp  dialogAbout.ui  dialogconfig.cpp  gnuplot-iostream.h  kolejki.pro  kolejki.pro.user.00e2c69  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mlTest.c  mlTest.py  moc_dialogAbout.cpp  moc_mainwindow.cpp  model.cpp  model.h  qrc_resources.cpp  startRuntimeDocker.sh  ui_dialogAbout.h  ui_dialogconfig.h  ui_mainwindow.h
3party/: download.sh  xlsxzipreader.cpp
algorithms/: algRekGeneral.cpp  algRekGeneral.h  algRekLag.cpp  algRekLag.h  algRekLagGS.cpp  algRekLagGS.h  alg_FAG_AnyStream.cpp  alg_FAG_AnyStream.h  alg_cFIFO_convGamma.cpp  alg_cFIFO_convGamma.h  alg_cFIFO_hybrid.cpp  alg_cFIFO_hybrid.h  alg_noFIFO.cpp  alg_noFIFO.h  algorithmConv3d.cpp  algorithmConv3d.h  algorithmConvGamma2d.cpp  algorithmConvGamma3.cpp  algorithmConvGamma3.h  algorithmHybridDiscr.cpp  algorithmHybridDiscr.h  algorithmHybridDiscrDesc.cpp  algorithmHybridDiscrDesc.h  algorytm.cpp  algorytm.h  investigator.cpp  investigator.h  simulationParameters.h  simulator.cpp  simulator.h  simulatorAllSystems.cpp  simulatorAllSystems.h  simulatorBufferFIFO.cpp  simulatorBufferFIFO.h  simulatorNoQeue.cpp  simulatorNoQeue.h  simulatorNoQeueLag.cpp  simulatorNoQeueLag.h  simulatorQeueFIFO.cpp  simulatorQeueFIFO.h  (+8 more)
console/: CMakeLists.txt  console.pro  main.cpp
core/: CMakeLists.txt  core.pro  model.cpp  model.h
core/algorithms/: FAG_AnyStr_ML.cpp  FAG_AnyStr_ML.h  FAG_AnyStr_hybrid.cpp  FAG_AnyStr_hybrid.h  FAG_conv_1d_plu.cpp  FAG_conv_1d_plu.h  FAG_conv_AnyStr_sim.cpp  FAG_conv_AnyStr_sim.h  FAG_hybrid.cpp  FAG_hybrid.h  LAG_reccurence.cpp  LAG_reccurence.h  LAG_reccurenceGS.cpp  LAG_recurenceGS.h  algRekGeneral.h  algRekLag.cpp  algRekLag.h  alg_FAG_AnyStream.cpp  alg_cFIFO_convGamma.cpp  alg_cFIFO_convGamma.h  alg_noFIFO.h  algorithmConv.cpp  algorithmHybridDiscr.h  algorithmHybridDiscrDesc.cpp  cFIFO_convGamma.cpp  cFIFO_convGamma.h  cFIFO_hybrid.cpp  cFIFO_hybrid.h  conv.cpp  conv3d.cpp  convGamma2d.cpp  convGamma3.cpp  convGamma3.h  dFIFO_hybridDesc.cpp  dFIFO_hybridDesc.h  hybridDiscr.cpp  hybridDiscr.h  investigator.cpp  investigator.h  reccurenceGeneral.cpp  (+12 more)
core/algorithms/abandonware/: conv.h  conv3d.h  convGamma2d.h
core/ml/: mlScale.py  test.py  trDistributionML.py
core/ml/trained_models/uniform_model_all_points/: saved_model.pb
core/ml/trained_models/uniform_model_all_points/variables/: variables.data-00000-of-00001  variables.index
core/results/: baseTypes.h  resultsApi.cpp  resultsApi.h  resultsApiTypes.h  resultsGnuplot.cpp  resultsGnuplot.h  resultsInvestigator.cpp  resultsInvestigator.h  resultsSingle.cpp  resultsSingle.h  resultsSingleGroup.h  resultsSystem.h
core/utils/: probDistributions.cpp  probDistributions.h  utilsMisc.h  vectorUtils.cpp  vectorUtils.h
gui/: dialogAbout.h  dialogconfig.h  dialogconfig.ui  gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
gui/languages/: kolejki_en.ts
languages/: kolejki_pl.ts
qtcreator-with-docker/: Dockerfile
results/: baseTypes.cpp  baseTypes.h  results.cpp  results.h  resultsApi.cpp  resultsApi.h  resultsApiTypes.h  resultsGnuplot.cpp  resultsGnuplot.h  resultsInvestigator.cpp  resultsInvestigator.h  resultsOld.cpp  resultsOld.h  resultsSingle.cpp  resultsSingle.h  resultsSingleGroup.cpp  resultsSystem.cpp  resultsSystem.h  resultsUtils.h  resultsXlsx.cpp  resultsXlsx.h
runtimeDocker/: Dockerfile  build.sh
utils/: decimal.h  lag.cpp  lag.h  utilsMisc.cpp
